# primer_repo_sergioandres03

./: pyproject.toml
Cuadernos/: README.MD  primer_cuaderno.ipynb
