[tool.poetry]
name = "primer-proyecto"
version = "0.0.1"
description = "Es mi primer proyecto"
authors = ["Sergio Medina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.4"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
